@@ -54,6 +54,8 @@ import cascading.scheme.hadoop.TextLine;
 import cascading.tap.MultiSourceTap;
 import cascading.tap.SinkMode;
 import cascading.tap.Tap;
+import cascading.tap.partition.DelimitedPartition;
+import cascading.tap.partition.Partition;
 import cascading.tuple.Fields;
 import cascading.tuple.Tuple;
 import cascading.tuple.TupleEntryCollector;
@@ -63,6 +65,7 @@ import org.apache.hadoop.fs.Path;
 import org.apache.hadoop.mapred.InputFormat;
 import org.apache.hadoop.mapred.InputSplit;
 import org.apache.hadoop.mapred.JobConf;
+import org.apache.hadoop.mapred.JobInProgress;
 import org.apache.hadoop.mapred.OutputCollector;
 import org.apache.hadoop.mapred.RecordReader;
 import org.junit.Test;
@@ -564,6 +567,47 @@ public class HadoopTapPlatformTest extends PlatformTestCase implements Serializa
     assertEquals( 1, splits.length );
 
     validateLength( source.openForRead( process ), 10 );
+    }
+
+  @Test
+  public void testCombinedPartitionTap() throws Exception
+    {
+    getPlatform().copyFromLocal( inputFileLower );
+
+    Tap source = getPlatform().getDelimitedFile( new Fields( "number", "lower" ), " ", inputFileLower );
+
+    Tap partitionTap = getPlatform().getDelimitedFile( new Fields( "lower" ), "+", getOutputPath( "/combinedpartition/partitioned" ), SinkMode.REPLACE );
+
+    Partition partition = new DelimitedPartition( new Fields( "number" ) );
+    partitionTap = getPlatform().getPartitionTap( partitionTap, partition, 1 );
+
+    Flow firstFlow = getPlatform().getFlowConnector().connect( source, partitionTap, new Pipe( "partition" ) );
+
+    firstFlow.complete();
+
+    // Configure combine inputs for reading from the partition tap
+    Map<Object, Object> properties = getProperties();
+    HfsProps.setUseCombinedInput( properties, true );
+    //set to lots of bytes so the test will combine all input files
+    HfsProps.setCombinedInputMaxSize( properties, 100000000L );
+
+    Tap sink = getPlatform().getDelimitedFile( new Fields( "number", "lower" ), "+", getOutputPath( "/combinedpartition/final" ), SinkMode.REPLACE );
+
+    Flow secondFlow = getPlatform().getFlowConnector( properties ).connect( partitionTap, sink, new Pipe( "copy" ) );
+
+    secondFlow.complete();
+
+    //Asserting we combined all partition files into one mapper
+    if( getPlatform().isUseCluster() )
+      assertEquals( 1, secondFlow.getStats().getCounterValue( JobInProgress.Counter.TOTAL_LAUNCHED_MAPS ) );
+
+    List<Tuple> values = getSinkAsList( secondFlow );
+    assertEquals( 5, values.size() );
+    assertTrue( values.contains( new Tuple( "1", "a" ) ) );
+    assertTrue( values.contains( new Tuple( "2", "b" ) ) );
+    assertTrue( values.contains( new Tuple( "3", "c" ) ) );
+    assertTrue( values.contains( new Tuple( "4", "d" ) ) );
+    assertTrue( values.contains( new Tuple( "5", "e" ) ) );
     }
 
   @Test
